@@ -60,7 +60,6 @@ GIP	292	Gibraltar Pound
 GMD	270	Dalasi
 GNF	324	Guinea Franc
 GTQ	320	Quetzal
-GWP	624	Guinea-Bissau Peso
 GYD	328	Guyana Dollar
 HKD	344	Hong Kong Dollar
 HNL	340	Lempira
