@@ -351,7 +351,7 @@ pon	pon		Pohnpeian
 por	por	pt	Portuguese
 pra	pra		Prakrit languages
 pro	pro		Provençal, Old (to 1500)
-pus	pus	ps	Pushto
+pus	pus	ps	Pushto; Pashto
 qaa-qtz	qaa-qtz		Reserved for local use
 que	que	qu	Quechua
 raj	raj		Rajasthani
