@@ -184,9 +184,11 @@ RE	REU	638	Reunion
 RO	ROU	642	Romania
 RU	RUS	643	Russian Federation
 RW	RWA	646	Rwanda
+BL	BLM	652	Saint Barthélemy
 SH	SHN	654	Saint Helena
 KN	KNA	659	Saint Kitts and Nevis
 LC	LCA	662	Saint Lucia
+MF	MAF	663	Saint Martin (French part)
 PM	SPM	666	Saint Pierre and Miquelon
 VC	VCT	670	Saint Vincent and the Grenadines
 WS	WSM	882	Samoa
