@@ -5,6 +5,7 @@ UNRELEASED
 * Require po4a in configure script for manpage translations
 * Require pkg-config and libxml++ (>2.6.0) in configure script
 * Add support for ISO 15924
+* Update tests to pass with iso-codes 1.8
 
 
 Isoquery 0.10
